// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`FastImage (iOS) renders 1`] = `
"<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    source={
      {
        "headers": {
          "token": "someToken",
        },
        "priority": "high",
        "uri": "https://facebook.github.io/react/img/logo_og.png",
      }
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>"
`;

exports[`FastImage (iOS) renders a normal Image when not passed a uri 1`] = `
"<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    source={
      {
        "testUri": "ReactNativeFastImageExample/src/images/jellyfish.gif",
      }
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>"
`;

exports[`FastImage (iOS) renders Image with fallback prop 1`] = `
"<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "testUri": "ReactNativeFastImageExample/src/images/jellyfish.gif",
      }
    }
    style={
      [
        {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        {
          "tintColor": undefined,
        },
      ]
    }
  />
</View>"
`;

exports[`FastImage (iOS) renders defaultSource 1`] = `
"<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={
      {
        "testUri": "ReactNativeFastImageExample/src/images/jellyfish.gif",
      }
    }
    resizeMode="cover"
    source={null}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>"
`;

exports[`FastImage (Android) renders a normal defaultSource 1`] = `
"<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={null}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>"
`;

exports[`FastImage (Android) renders a normal defaultSource when fails to load source 1`] = `
"<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={
      {
        "uri": "https://www.google.com/image_does_not_exist.png",
      }
    }
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>"
`;

exports[`FastImage (Android) renders a non-existing defaultSource 1`] = `
"<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    source={null}
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>"
`;
